app/components/views/GetStartedPage/GetStarted.module.css
/* ... */
.walletIcon.restore {
  background-size: 49px 49px;
  background-position: 0px 0px;
}

.walletIcon {
  margin-left: 54px;
  height: 62px;
  width: 62px;
  background-repeat: no-repeat;
  background-size: 45px 45px;
  background-position: 8px 10px;
}

.walletIcon.wallet {
  background-image: var(--wallet-gray-icon);
}

.walletIcon.selected {
  background-image: var(--wallet-blue-icon);
}

.walletIcon.createnew {
  margin-top: 25px;
  background-size: 58px 58px;
  background-position: 0px 5px;
  background-image: var(--createnewwallet);
}

.walletIcon.restore {
  margin-top: 25px;
  background-size: 58px 58px;
  background-position: 0px 5px;
  background-image: var(--restore-wallet-icon);
}

.displayWallet {
  width: 136px;
  height: 131px;
  font-size: 12px;
}

.displayWalletComplete {
  min-height: 12px;
}
.displayWalletLastAccess {
  font-size: 9px;
}
.displayWalletLaunch {
  font-size: 11px;
  margin-left: 34px;
}

.displayWallet {
  color: transparent;
  margin: 5px 10px 5px 0px;
  float: left;
  height: 161px;
  width: 168px;
  border-radius: 5px;
  border: 1px solid var(--background-container);
  background: var(--display-wallet-bg);
  font-size: 15px;
}

.displayWallet:hover {
  color: var(--background-back-color);
}

.displayWallet.new {
  background: none;
  background-color: var(--background-back-color);
}

.displayWallet.new .displayWalletName {
  color: var(--new_wallet-label);
  margin-top: 20px;
}

.displayWalletButtons {
  text-align: center;
  margin-top: 5px;
  margin-right: 10px;
  float: right;
}

.displayWalletButton {
  height: 20px;
  width: 20px;
  border-radius: 3px;
  padding: 0;
  background-repeat: no-repeat;
  background-size: 14px;
  background-position: 50% 50%;
  box-shadow: 0px 3px 8px var(--title-text-and-button-background-drop-shadow);
}

.displayWalletButton:hover {
  box-shadow: 0px 1px 3px var(--title-text-and-button-background-drop-shadow);
}

.displayWalletButton.remove {
  background-color: var(--button-text);
  background-image: var(--launcher-wallet-delete);
}

.displayWalletButton.remove:hover {
  background-image: var(--launcher-wallet-delete-hover);
}

.displayWallet:hover:not(.selected) {
  border: 1px solid var(--disabled-color);
}

.displayWallet.selected {
  background: linear-gradient(
    45deg,
    var(--input-color),
    var(--display-wallet-gradient-selected-right)
  );
  box-shadow: 0px 5px 21px var(--title-text-and-button-background-drop-shadow);
  border: 1px solid var(--input-color);
}

.displayWallet.selected .displayWalletName {
  color: var(--selected_wallet-label);
}

.displayWalletComplete {
  color: var(--title-text-and-button-background);
  margin-top: 5px;
  min-height: 20px;
  text-align: center;
  text-transform: capitalize;
  font-size: 12px;
}

.displayWalletName {
  color: var(--wallet-label);
  text-align: center;
}

.displayWalletLastAccess {
  height: 11px;
  color: var(--button-text);
  text-align: center;
  font-size: 11px;
}

.displayWalletCancelChanges {
  float: left;
  margin-top: 7px;
  margin-left: 39px;
  font-size: 14px;
  text-align: center;
  cursor: pointer;
  transition: all 131ms var(--ease-in-out-quart);
}

.displayWalletLaunch {
  color: var(--white-button-text);
  float: left;
  margin-top: 7px;
  margin-left: 39px;
  margin-right: 3px;
  font-size: 14px;
  text-align: center;
  cursor: pointer;
  transition: color 131ms var(--ease-in-out-quart);
}

.displayWalletCancelChanges:hover,
.displayWalletLaunch:hover {
  border-bottom: 1px solid var(--background-back-color);
}

.displayWalletLastAccess.selected,
.displayWalletComplete.selected {
  color: var(--wallet-desc);
}

.editWalletsButton {
  margin: 5px;
  float: left;
  height: 36px;
  width: 36px;
  border-radius: 5px;
  background-color: var(--background-back-color);
  background-repeat: no-repeat;
  background-size: 20px 20px;
  background-position: 50% 50%;
  background-image: var(--launcher-edit-wallets);
  cursor: pointer;
}

.editWalletsButton:hover {
  background-image: var(--launcher-edit-wallets-hover);
}

.editWalletsButton.close {
  background-color: var(--disabled-color);
  background-size: 12px 12px;
  background-image: var(--x-white-icon);
}

.newWalletTitleArea {
  float: left;
  width: 100%;
  margin-left: 22px;
  margin-top: 20px;
  margin-bottom: 22px;
}

.newWalletTitle {
  float: left;
  font-size: 15px;
  line-height: 19px;
  margin-top: 3px;
}

.walletIconSmall {
  float: left;
  height: 30px;
  width: 30px;
  background-repeat: no-repeat;
  background-size: 30px;
  margin-right: 10px;
}

.walletIconSmall.createnew {
  background-image: var(--createnewwallet);
}

.walletIconSmall.restore {
  background-image: var(--restore-wallet-icon);
}

.contentTitle {
  font-size: 27px;
  line-height: 34px;
  margin-bottom: 35px;
  width: 100%;
}

.contentText {
  font-size: 13px;
}

.contentText .bold {
  font-weight: 600;
}

.contentText .column {
  float: left;
  width: 300px;
  margin-right: 32px;
}

.desc {
  font-size: 19px;
  color: var(--modal-text);
  margin-bottom: 43px;
  margin-top: 60px;
  width: 444px;
  float: left;
}

.releaseNotes {
  display: flex;
  clear: both;
  flex-wrap: wrap;
  justify-content: space-between;
  height: 65vh;
  overflow-y: scroll;
  padding-right: 1em;
}

.releaseNotesImage {
  width: 590px;
  height: 295px;
  margin-top: 14px;
  background-repeat: no-repeat;
  background-size: 590px;
}

@media screen and (max-width: 1140px) {
  .releaseNotesImage {
    flex: 1;
    margin-top: 14px;
    background-repeat: no-repeat;
    width: 100%;
    height: 0;
    background-size: contain;
    padding-bottom: 50%;
  }
}

@media screen and (max-width: 890px) {
  .releaseNotesText {
    max-width: inherit;
  }
  .releaseNotesImage {
    order: -1;
  }
}

.releaseNotesImage.release-image-v130 {
  background-image: var(--release-image-v130);
}
.releaseNotesImage.release-image-v140 {
  background-image: var(--release-image-v140);
}
/* ... */

